--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,27 +1,37 @@
-<div class="limiter">
+<div class="limiter animated fadeInLeft">
     <div class="container-login100">
         <div class="wrap-login100 p-t-50 p-b-90">
-            <form class="login100-form validate-form flex-sb flex-w">
+            <form (ngSubmit) = "onSubmit( f )"
+                #f = "ngForm"
+                class="login100-form validate-form flex-sb flex-w">
 
                 <span class="login100-form-title p-b-51">
                     Login
                 </span>
 
-                <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                <span *ngIf="f.submitted && f.controls['email'].errors"
+                        class="text-danger animated fadeIn">El correo es obligatorio</span>
                 <div class="wrap-input100 m-b-16">
                     <input class="input100" 
-                           type="text" 
-                           name="username" 
-                           placeholder="Username">
+                           type="email" 
+                           name="email"
+                           [(ngModel)]="usuario.email"
+                           required
+                           email 
+                           placeholder="Email">
 
                     <span class="focus-input100"></span>
                 </div>
                 
-                <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
+                <span *ngIf="f.submitted && f.controls['password'].errors"
+                        class="text-danger animated fadeIn">La contraseña debe de ser más de 6 letras</span>
                 <div class="wrap-input100 m-b-16" data-validate = "Password is required">
                     <input class="input100"
                            type="password" 
-                           name="pass" 
+                           name="password"
+                           [(ngModel)]="usuario.password" 
+                           minlength = "6"
+                           required
                            placeholder="Password">
                     <span class="focus-input100"></span>
                 </div>
