--- a/src/app/pages/registro/registro.component.html
+++ b/src/app/pages/registro/registro.component.html
@@ -1,40 +1,51 @@
-<div class="limiter">
+<div class="limiter animated fadeInRight">
         <div class="container-login100">
             <div class="wrap-login100 p-t-50 p-b-90">
-                <form  (ngSubmit) = "onSubmit()"
+               
+                <form  (ngSubmit) = "onSubmit( f )"
+                    #f = "ngForm"
                     class="login100-form validate-form flex-sb flex-w">
 
                     <span class="login100-form-title p-b-51">
                         Crear nueva cuenta
                     </span>
 
-                    <!-- <span class="text-danger">El correo es obligatorio</span> -->
+                    <span *ngIf="f.submitted && f.controls['email'].errors"
+                        class="text-danger animated fadeIn">El correo es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
-                               type="text"
+                               type="email"
                                name="email"
                                [(ngModel)]="usuario.email"
+                               required
+                               email
                                placeholder="Email">
 
                         <span class="focus-input100"></span>
                     </div>
 
-                    <!-- <span class="text-danger">El nombre es obligatorio</span> -->
+                    <span *ngIf="f.submitted && f.controls['nombre'].errors"
+                        class="text-danger animated fadeIn">El nombre es obligatorio</span>
                     <div class="wrap-input100 m-b-16">
                         <input class="input100"
                                type="text"
                                name="nombre"
+                               minlength = "2"
+                               required
                                [(ngModel)]="usuario.nombre"
                                placeholder="Nombre y apellidos">
 
                         <span class="focus-input100"></span>
                     </div>
 
-                    <!-- <span class="text-danger">La contraseña debe de ser más de 6 letras</span> -->
+                    <span *ngIf="f.submitted && f.controls['password'].errors"
+                        class="text-danger animated fadeIn">La contraseña debe de ser más de 6 letras</span>
                     <div class="wrap-input100 m-b-16" data-validate = "Password is required">
                         <input class="input100"
                                type="password"
-                               name="pass"
+                               name="password"
+                               minlength = "6"
+                               required
                                [(ngModel)]="usuario.password"
                                placeholder="Password">
                         <span class="focus-input100"></span>
@@ -49,7 +60,7 @@
                         </div>
 
                         <div>
-                            <a routerLink="/registro" class="txt1">
+                            <a routerLink="/login" class="txt1">
                                 ¿Ya tienes cuenta? / Ingresar
                             </a>
                         </div>
