avance hasta el video 14

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="limiter animated fadeInLeft">
     <div class="container-login100">
         <div class="wrap-login100 p-t-50 p-b-90">
-            <form (ngSubmit) = "onSubmit( f )"
+            <form (ngSubmit) = "login( f )"
                 #f = "ngForm"
                 class="login100-form validate-form flex-sb flex-w">
 
