--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,5 +1,12 @@
-<div class="m-5">
-  <h1>Mi aplicacion secreta</h1>
-  <hr>
-  <button class="btn btn-outline-danger" (click)="salir()">Logout</button>
+<app-navbar></app-navbar>
+<div class="row" style="height: 100vh;">
+  <div class="col-3">
+    <app-latbar></app-latbar>
+  </div>
+  <div class="col-7 mt-5">
+    <div class="container-fluid">
+      <h1>Mi aplicacion secreta</h1>
+      <hr>
+    </div>
+
 </div>
