--- a/src/app/layouts/latbar/latbar.component.html
+++ b/src/app/layouts/latbar/latbar.component.html
@@ -1,27 +1,59 @@
-<div class="wrapper fixed-left flex-row">
-    <nav id="sidebar">
-      <div class="sidebar-header">
-        <h3><i class="fas fa-user"></i>Username</h3>
+<div class="wrapper fixed-left flex-column" style="height: 100vh;">
+  <nav id="sidebar">
+    <div class="sidebar-header user-panel mt-3">
+      <div class="pull-left image">
+        <img src="./../../../assets/images/daniel.jpeg" class="img-circle" alt="User Image">
       </div>
+      <div class="pull-left info">
+        <h5> {{ nombre }} </h5>
+      </div>
+    </div>
 
-      <ul class="list-unstyled components">
-        <li>
-          <a href=""><i class="fas fa-home"></i>
-           <span>Home</span> 
-          </a>
-        </li>
-        <li>
-          <a href=""><i class="fas fa-clipboard"></i>Dashboard</a>
-        </li>
-        <li>
-          <a href=""><i class="fas fa-user-cog"></i>Settings</a>
-        </li>
-        <li>
-          <a href=""><i class="fas fa-hands-helping"></i>Services</a>
-        </li>
-        <li>
-          <a href=""><i class="fas fa-info"></i>About</a>
-        </li>
-      </ul>
-    </nav>
-<div></div>    
+    <ul class="list-unstyled components">
+      <li class="nav-item has-treeview">
+        <a class="nav-link">
+          <i class="nav-icon"></i>
+          <span>
+            Modulo de Usuarios
+          </span>
+        </a>
+      </li>
+      <li class="nav-item has-treeview">
+        <a class="nav-link" (click)="oculta()">
+          <i class="nav-icon fas fa-user"></i>
+          <span>
+            Usuarios
+          </span>
+        </a>
+        <ul *ngIf="muestraUsuarios" class="treeview-menu">
+          <li><a><i class="fa fa-circle-o"></i> Alta de Usuario</a></li>
+          <li><a><i class="fa fa-circle-o"></i> Asigna Permisos</a></li>
+          <li><a><i class="fa fa-circle-o"></i> Cambia Contraseña</a></li>
+          <li><a><i class="fa fa-circle-o"></i> Consulta Usuarios</a></li>
+          <li><a><i class="fa fa-circle-o"></i> Eliminar</a></li>
+        </ul>        
+      </li>
+      <li class="nav-item has-treeview">
+        <a class="nav-link" (click)="ocultaModulo()">
+          <i class="nav-icon fas fa-book" ></i>
+          <span>
+            Modulos
+          </span>
+        </a>
+        <ul *ngIf="muestaModulos" class="treeview-menu">
+          <li><a ><i class="fa fa-circle-o"></i> Alta de Modulo</a></li>
+          <li><a ><i class="fa fa-circle-o"></i> Consulta </a></li>
+          <li><a ><i class="fa fa-circle-o"></i> Eliminar</a></li>
+        </ul>        
+      </li>
+      <li class="nav-item has-treeview">
+        <a href="#" class="nav-link">
+          <i class="nav-icon fas fa-shield-alt"></i>
+          <span>
+            Ayuda
+          </span>
+        </a>
+      </li>
+    </ul>
+  </nav>
+  <div></div>
