correcion de router

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,15 @@
+<app-navbar></app-navbar>
 
-<router-outlet></router-outlet>
+
+
+<div class="row" style="height: 100vh;">
+    <div class="col-3">
+        <app-latbar></app-latbar>      
+    </div>
+    <div class="col-7 mt-5">
+      <div class="container-fluid">
+        <router-outlet></router-outlet>        
+      </div>
+  
+  </div>
+  
